fixed taskbar being too tall

--- a/os/Desktop/components/Main/Main.module.scss
+++ b/os/Desktop/components/Main/Main.module.scss
@@ -7,6 +7,7 @@
 	color: #f1f8ff;
 	user-select: none;
 	overflow: hidden;
+	flex-grow: 1;
 }
 
 .background {
