--- a/os/Desktop/components/Taskbar/Taskbar.module.scss
+++ b/os/Desktop/components/Taskbar/Taskbar.module.scss
@@ -4,7 +4,6 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	flex-grow: 1;
 	backdrop-filter: blur(3px);
 	background-color: #525252;
 	color: #f1f8ff;
